[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/resume.gd" type="Script" id=1]
[ext_resource path="res://assets/new_theme.tres" type="Theme" id=2]

[node name="resume" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.415686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
pause_mode = 1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_resume" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_right = 192.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "resume"

[node name="btn_restart" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 51.0
margin_right = 192.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "restart level"

[node name="btn_return" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 102.0
margin_right = 192.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "return to title"
[connection signal="pressed" from="VBoxContainer/btn_resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_return" to="." method="_on_btn_return_pressed"]
